--- a/style.css
+++ b/style.css
@@ -84,9 +84,13 @@ header .navbar{
 }
 
 
-.navbar .nav-link:hover,{
+.navbar .nav-link:hover{
     color: var(--primary-color);
     background: var(--secondary-color);
+}
+
+#menu-close-button, #menu-open-button{
+    display: none;
 }
 
 .hero-section{
@@ -131,18 +135,14 @@ header .navbar{
     transition: 0.3s ease;
 }
 
-.hero-section .hero-details .button:hover{
+.hero-section .hero-details .button:hover,
+.hero-section .hero-details .contact-us{
     color: var(--white-color);
     border-color: var(--white-color);
     background: transparent;
 }
 
-.contact-us{
-    color: var(--white-color);
-    border-color: var(--white-color);
-    background: transparent;
-}
-.contact-us:hover{
+.hero-section .hero-details .contact-us:hover{
     color: var(--primary-color);
     border-color: var(--secondary-color);
     background: var(--secondary-color);
@@ -156,4 +156,187 @@ header .navbar{
 .hero-image-wrapper{
     max-width: 500px;
     margin-right: 30px;
+}
+
+.about-section{
+    padding: 120px 0;
+    background: var(--light-pink-color);
+}
+
+.section-content{
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about-image-wrapper .about-image{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+/* From Uiverse.io by elisapi */ 
+.card {
+  width: fit-content;
+  height: fit-content;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  gap: 20px;
+}
+
+.socialContainer {
+  width: 52px;
+  height: 52px;
+  background-color: rgb(65, 29, 131);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transition-duration: 0.3s;
+  border-radius: 30px;
+}
+
+.containerOne:hover {
+  background-color: #d62976;
+  transition-duration: 0.3s;
+  transform: scale(1.2);
+}
+
+.containerTwo:hover {
+  background-color: #00acee;
+  transition-duration: 0.3s;
+  transform: scale(1.2);
+}
+
+.containerThree:hover {
+  background-color: #0072b1;
+  transition-duration: 0.3s;
+  transform: scale(1.2);
+}
+
+.containerFour:hover {
+  background-color: #128c7e;
+  transition-duration: 0.3s;
+  transform: scale(1.2);
+}
+
+.socialContainer:active {
+  transform: scale(0.9);
+  transition-duration: 0.3s;
+}
+
+.socialSvg {
+  width: 17px;
+}
+
+.socialSvg path {
+  fill: rgb(255, 255, 255);
+}
+
+.socialContainer:hover .socialSvg {
+  animation: slide-in-top 0.3s both;
+}
+
+@keyframes slide-in-top {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
+@media screen and (max-width:900px){
+    :root{
+    --font-size-m: 1rem;
+    --font-size-l: 1.3rem;
+    --font-size-xl: 1.5rem;
+    --font-size-xxl: 1.8rem;
+    }
+
+    body.show-mobile-menu header::before{
+        content: "";
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        backdrop-filter: blur(5px);
+        background: rgba(0, 0, 0, 0.2);
+    }
+    .navbar #menu-close-button, #menu-open-button{
+        display: block;
+        font-size: var(--font-size-l);
+    }
+
+    .navbar #menu-close-button{
+        position: absolute;
+        right: 30px;
+        top: 30px;
+    }
+
+    .navbar #menu-open-button{
+        color: white;
+    }
+
+    .nav-menu{
+        display: block;
+        position: fixed;
+        left: -300px;
+        top: 0;
+        width: 250px;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 100px;
+        background: var(--white-color);
+        transition: left 0.2s ease ;
+    }
+
+    body.show-mobile-menu .nav-menu{
+        left: 0;
+    }
+
+    .nav-menu .nav-link{
+        color: var(--dark-color);
+        display: block;
+        margin-top: 17px;
+        font-size: var(--font-size-l);
+    }
+
+    .hero-section .section-content{
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        gap: 50px;
+        padding: 30px 20px 20px;
+    }
+
+    .hero-section .section-content :is(.subtitle, .description){
+        max-width: 100%;
+    }
+
+    .buttons{
+        justify-content: center;
+    }
+
+    .hero-image-wrapper{
+        order: 1;
+        max-width: 270px;
+        margin-right: 0;
+         /* margin: 0 0 20px 0; */
+    }
+
+    .hero-details{
+        order: 2;
+        text-align: center;
+    }
 }
