--- a/style.css
+++ b/style.css
@@ -324,6 +324,36 @@ header .navbar{
     font-size: var(--font-size-m);
 }
 
+.testimonials-section{
+    padding: 50px 0 100px;
+    background: var(--light-pink-color);
+}
+
+.testimonials-section .testimonials-list .testimonial{
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    padding: 35px !important;
+    text-align: center !important;
+
+}
+
+.testimonials-section .testimonial.swiper-slide .user-image{
+    height: 180px;
+    width: 180px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-bottom: 50px;
+}
+
+.testimonial.swiper-slide .name{
+    margin-bottom: 16px;
+    font-size: var(--font-size-m);
+}
+
+.testimonial .feedback{
+    line-height: 25px;
+}
 
 @media screen and (max-width: 1024px){
 
@@ -453,4 +483,9 @@ header .navbar{
     .menu-section .menu-list{
         gap: 60px;
     }
+    .testimonials-section .testimonial.swiper-slide .user-image {
+    width: 90px;
+    height: 90px;
+    margin-bottom: 20px;
+  }
 }
