--- a/style.css
+++ b/style.css
@@ -361,63 +361,81 @@ header .navbar{
     background: var(--light-pink-color);
 }
 
-.contact-section .section-contente{
+.contact-section .section-contente {
     display: flex;
-    gap: 50px;
+    gap: 48px;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.contact-section .contact-info-list .contact-info{
+    display: flex;
+    gap:  20px;
+    align-items: center;
+    margin: 20px 0;
+}
+
+.contact-section .contact-info-list .contact-info i{
+    font-size: var(--font-size-m);
+}
+
+.contact-section .contact-form{
+    max-width: 50%;
+}
+
+.contact-section .contact-form .form-input{
+    width: 100%;
+    height: 50px;
+    background: var(--white-color);
+    padding: 0 12px;
+    border-radius: 8px;
+    outline: none;
+    border: 1px solid var(--medium-gray-color);
+    font-size: var(--font-size-m);
+    margin-bottom: 16px;
+}
+
+.contact-section .contact-form .form-input:focus{
+    border-color: var(--secondary-color);
+}
+
+.contact-section .contact-form textarea.form-input{
+    height: 100px;
+    padding: 12px;
+    resize: vertical;
+}
+
+.contact-section .contact-form .submit{
+    padding: 10px 26px;
+    margin-top: 10px;
+    color: var(--white-color);
+    background: var(--primary-color);
+    border-radius: 30px;
+    font-size: var(--font-size-m);
+    border: 1px solid var(--primary-color);
+    font-weight: 500;
+    transition: 0.3s ease;
+}
+
+.contact-section .contact-form .submit:hover{
+    color: var(--primary-color);
+    background: transparent;
+}
+
+.footer-section{
+    padding: 20px 0;
+    background: var(--dark-color);
+}
+
+.footer-section .section-content{
+    display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.form-input {
-  border: none;
-  outline: none;
-  border-radius: 15px;
-  padding: 1em;
-  background-color: #ccc;
-  box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
-  transition: 300ms ease-in-out;
+
+.footer-section :where(.copyright-message, .social-links, .policy-link){
+    color: var(--white-color);
 }
-
-.form-input:focus {
-  background-color: white;
-  transform: scale(1.05);
-  box-shadow: 13px 13px 100px #969696,
-             -13px -13px 100px #ffffff;
-}
-
-/* From Uiverse.io by lenfear23 */ 
-.submit {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  outline: none;
-  cursor: pointer;
-  width: 150px;
-  height: 50px;
-  background-image: linear-gradient(to top, #D8D9DB 0%, #fff 80%, #FDFDFD 100%);
-  border-radius: 30px;
-  border: 1px solid #8F9092;
-  transition: all 0.2s ease;
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 14px;
-  font-weight: 600;
-  color: #606060;
-  text-shadow: 0 1px #fff;
-}
-
-.submit:hover {
-  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 3px 3px #CECFD1;
-}
-
-.submit:active {
-  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 5px 3px #999, inset 0 0 30px #aaa;
-}
-
-.submit:focus {
-  box-shadow: 0 4px 3px 1px #FCFCFC, 0 6px 8px #D6D7D9, 0 -4px 4px #CECFD1, 0 -6px 4px #FEFEFE, inset 0 0 5px 3px #999, inset 0 0 30px #aaa;
-}
-
-
-
 
 @media screen and (max-width: 1024px){
 
@@ -496,7 +514,7 @@ header .navbar{
         padding: 30px 20px 20px;
     }
 
-    .hero-section .section-content :is(.subtitle, .description), .about-section .about-details{
+    .hero-section .section-content :is(.subtitle, .description), .about-section .about-details, .contact-section .contact-form{
         max-width: 100%;
     }
 
@@ -544,6 +562,11 @@ header .navbar{
 
     .gallery-list .gallery-item{
         width: calc((100% - 2 * 30px) / 2);
+    }
+
+    .contact-section .section-contente{
+        flex-direction: column-reverse;
+        align-items: center;
     }
 }
 
